--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@ p    {color: red;}
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>Welcome to my site!</h1>
+<p>GIS rules!</p>
 
+  
+<img src="https://images-na.ssl-images-amazon.com/images/I/61GaHo-zgQL._AC_SL1000_.jpg" alt="Map of the world"</img>
 </body>
 </html>
