--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ p    {color: red;}
 <p>GIS rules!</p>
 
   
-<img src="https://images-na.ssl-images-amazon.com/images/I/61GaHo-zgQL._AC_SL1000_.jpg" alt="Map of the world"</img>
+<img src="https://lh3.googleusercontent.com/proxy/B0mEng28eV9kSXDwL93FkWpH5O07K3cGQ6lBaIWYwh7382sLc0ooOVRLs58EbYBM4dR_ccKLzDSaCLtlbC1eeqMGa9Eae3H1FzatDgApAIpewVBWlE1TV2UWIgDUmG3EBMM" alt="Map of the world"</img>
 </body>
 </html>
