--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ p    {color: red;}
 <p>GIS rules!</p>
 
   
-<img src="https://lh3.googleusercontent.com/proxy/B0mEng28eV9kSXDwL93FkWpH5O07K3cGQ6lBaIWYwh7382sLc0ooOVRLs58EbYBM4dR_ccKLzDSaCLtlbC1eeqMGa9Eae3H1FzatDgApAIpewVBWlE1TV2UWIgDUmG3EBMM" alt="Map of the world"</img>
+<img src="https://freepngimg.com/thumb/map/24881-5-world-map-photos.png" alt="Map of the world"</img>
 </body>
 </html>
