--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ p    {color: red;}
 <p>GIS rules!</p>
 
   
-<img src="https://freepngimg.com/thumb/map/24881-5-world-map-photos.png" alt="Map of the world"</img>
+<img src="https://lh3.googleusercontent.com/proxy/psT0RG27OSMxZmzcAweUnsNmjKfaTxKQJK98NP6YJJEWkfOpkTUBi81ulqy9gO5gEZ4ccfBz3iVW8w6fUXAGFeCMq7KDNTFf5raI_tKhBMUsDrSYvu3RlmCzySJD" alt="Map of the world"</img>
 </body>
 </html>
