--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
 <head>
 <style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+body { 
+	background-color: navy;
+}
+
+h1 {
+	text-align: center;
+	color: white;
+}
+
+h2 {
+	text-align: center;
+	color: crimson;
+}
+
+p {
+	text-align: left;
+	color: gold;
+}
 </style>
 </head>
 <body>
