--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@ body {
 h1 {
 	text-align: center;
 	color: white;
+	font-family: "Arial Black", Gadget, sans-serif;
 }
 
 h2 {
 	text-align: center;
 	color: crimson;
+	font-family: "Arial Black", Gadget, sans-serif;
 }
 
 p {
 	text-align: left;
 	color: gold;
+	font-family: Arial, Helvetica, sans-serif;
 }
 </style>
 </head>
 <body>
 
-<h1>Welcome to my site!</h1>
-<p>GIS rules!</p>
+<h1>Erik Oosterbaan</h1>
+<h2>Agent 97</h2>
+<p>Top Secret GIS Agent File</p>
 
   
-<img src="https://lh3.googleusercontent.com/proxy/psT0RG27OSMxZmzcAweUnsNmjKfaTxKQJK98NP6YJJEWkfOpkTUBi81ulqy9gO5gEZ4ccfBz3iVW8w6fUXAGFeCMq7KDNTFf5raI_tKhBMUsDrSYvu3RlmCzySJD" alt="Map of the world"</img>
 </body>
 </html>
