--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Erik's Top Secret Profile</title>
 <style>
 body { 
 	background-color: navy;
@@ -27,8 +28,10 @@ p {
 </head>
 <body>
 
+
 <h1>Erik Oosterbaan</h1>
-<h2>Agent 97</h2>
+<img src="https://pixy.org/src/484/4846764.png" alt="Agent 95" width="300" height="335">
+<h2>Agent 95</h2>
 <p>Top Secret GIS Agent File</p>
 
   
