--- a/index.html
+++ b/index.html
@@ -1,38 +1,15 @@
-<!DOCTYPE html>
-<html>
+<html lang="en-CA">
 <head>
-<title>Erik's Top Secret Profile</title>
-<style>
-body { 
-	background-color: navy;
-}
-
-h1 {
-	text-align: center;
-	color: white;
-	font-family: "Arial Black", Gadget, sans-serif;
-}
-
-h2 {
-	text-align: center;
-	color: crimson;
-	font-family: "Arial Black", Gadget, sans-serif;
-}
-
-p {
-	text-align: left;
-	color: gold;
-	font-family: Arial, Helvetica, sans-serif;
-}
-</style>
+<title>Erik's Pizzeria</title>
+<style></style>
 </head>
 <body>
 
 
-<h1>Erik Oosterbaan</h1>
-<img src="https://pixy.org/src/484/4846764.png" alt="Agent 95" width="200" height="223">
-<h2>Agent 95</h2>
-<p>Top Secret GIS Agent File</p>
+<h1>Erik's Pizzera</h1>
+<img src="/images/pizzaheader.png" alt="Aesthetic Pizza Header" width="450" height="300">
+<h2>Quality Pizza Since 1995</h2>
+<p>Windsor, Ontario</p>
 
   
 </body>
