--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 <h1>Erik's Pizzera</h1>
-<img src="../images/pizzaheader.png" alt="Aesthetic Pizza Header" width="450" height="300">
+<img src="images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
 <h2>Quality Pizza Since 1995</h2>
 <p>Windsor, Ontario</p>
 
