--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en-CA">
 <head>
 <title>Erik's Pizzeria</title>
@@ -6,10 +7,17 @@
 <body>
 
 
-<h1>Erik's Pizzera</h1>
-<img src="images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
-<h2>Quality Pizza Since 1995</h2>
-<p>Windsor, Ontario</p>
+<h1>Erik's Pizzeria</h1>
+<div class="custom-container">
+<ul itemtype="http://www.schema.org/SiteNavigationElement" itemscope id="horizontal-menu" class="horizontal-menu">…</ul>
+<li class="menu-item menu-item--expanded has-sub-nav" itemscope="Fonts.">
+<a href="/fonts" title="Fonts." itemprop="url" data-drupal-link-system-path="node/691">Fonts.</a>
+</div>
+
+
+<img src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
+<h2>Agent 95</h2>
+<p>Top Secret GIS Agent File</p>
 
   
 </body>
