--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
 
 <h1>Erik's Pizzeria</h1>
-<div class="custom-container">
-<ul itemtype="http://www.schema.org/SiteNavigationElement" itemscope id="horizontal-menu" class="horizontal-menu">…</ul>
-<li class="menu-item menu-item--expanded has-sub-nav" itemscope="Fonts.">
-<a href="/fonts" title="Fonts." itemprop="url" data-drupal-link-system-path="node/691">Fonts.</a>
-</div>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="menu.html">Menu</a></li>
+  <li><a href="locations.html">Locations</a></li>
+</ul>
 
 
 <img src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
-<h2>Agent 95</h2>
-<p>Top Secret GIS Agent File</p>
+<h2>Authentic Windsor Pizza</h2>
+<p>est. 1995</p>
 
   
 </body>
