--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
+<link rel="stylesheet" href="style.css">
 <title>Erik's Pizzeria</title>
 <style></style>
 </head>
