--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <h1>Erik's Pizzeria</h1>
 <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="menu.html">Menu</a></li>
-  <li><a href="locations.html">Locations</a></li>
+<li><a href="index.html">Home</a></li><li><a href="menu.html">Menu</a></li><li><a href="locations.html">Locations</a></li>
 </ul>
 
 
