--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 
 <h1>Erik's Pizzeria</h1>
-<ul>
-<li><a href="index.html">Home</a></li><li><a href="menu.html">Menu</a></li><li><a href="locations.html">Locations</a></li>
-</ul>
+<div><ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="menu.html">Menu</a></li>
+  <li><a href="locations.html">Locations</a></li>
+</ul></div>
 
 
 <img src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
