--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<h1>Erik's Pizzeria</h1>
+<h1 class="serif">Erik's Pizzeria</h1>
 <div><ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
@@ -17,8 +17,8 @@
 
 
 <img src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
-<h2>Authentic Windsor Pizza</h2>
-<p>est. 1995</p>
+<h2 class="serif">Authentic Windsor Pizza</h2>
+<p class="sansserif">est. 1995</p>
 
   
 </body>
