--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 
 <h1 class="serif">Erik's Pizzeria</h1>
-<div><ul>
+<ul class="sansserif">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
   <li><a href="locations.html">Locations</a></li>
-</ul></div>
+</ul>
 
 
 <img src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
