--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 <h1 class="serif">Erik's Pizzeria</h1>
-<ul class="sansserif">
+<ul class="nav">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
   <li><a href="locations.html">Locations</a></li>
