--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </ul>
 
 
-<img src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
+<img class="header" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
 <h2 class="serif">Authentic Windsor Pizza</h2>
 <p class="sansserif">est. 1995</p>
 
