--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 
 <h1 class="serif">Erik's Pizzeria</h1>
+<h2 class="serif">Authentic Windsor Pizza</h2>
+<h3 class="sansserif">est. 1995</h3>
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
@@ -17,7 +19,6 @@
 
 
 <img class="header" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
-<h2 class="serif">Authentic Windsor Pizza</h2>
 <p class="sansserif">est. 1995</p>
 
   
