--- a/menu.html
+++ b/menu.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>Profile</title>
-<style></style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<title>Erik's Pizzeria</title>
 </head>
 <body>
 
 
-<h1>Profile</h1>
-<img src="/images/agent95.png" title="Agent 95 Headshot" alt="Agent 95 Headshot" width="200" height="223">
-<h2>Agent 95</h2>
-<p>Strengths: etc....</p>
+<h1 class="serif">Erik's Pizzeria</h1>
+<h2 class="serif">Authentic Windsor Pizza</h2>
+<h3 class="sansserif">est. 1995</h3>
+<ul class="nav">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="menu.html">Menu</a></li>
+  <li><a href="locations.html">Locations</a></li>
+</ul>
+
+
+<table id="menu">
+  <tr>
+    <th>CREATE YOUR OWN PIZZA!</th>
+    <th>SMALL</th> 
+    <th>MEDIUM</th>
+    <th>LARGE</th>
+  </tr>
+  <tr>
+    <td>Cheese</td>
+    <td>$10</td>
+    <td>$15</td>
+    <td>$20</td>
+  </tr>
+  <tr>
+    <td>Cheese + 1 topping</td>
+    <td>$11</td>
+    <td>$16</td>
+    <td>$21</td>
+  </tr>
+  <tr>
+    <td>Cheese + 2 toppings</td>
+    <td>$12</td>
+    <td>$17</td>
+    <td>$22</td>
+  </tr>
+  <tr>
+    <td>Cheese + 3 toppings</td>
+    <td>$13</td>
+    <td>$18</td>
+    <td>$23</td>
+  </tr>
+  <tr>
+    <td>Cheese + 4 toppings</td>
+    <td>$14</td>
+    <td>$19</td>
+    <td>$24</td>
+  </tr>
+</table>
+  
+<p class="sansserif"></p>
 
   
 </body>
