--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
   <li><a href="locations.html">Locations</a></li>
 </ul>
 
-
+  <h3>Menu</h3>
 <table id="menu">
   <tr>
     <th>CREATE YOUR OWN PIZZA!</th>
