--- a/menu.html
+++ b/menu.html
@@ -18,42 +18,42 @@
 </ul>
 
   <h3>Menu</h3>
-<table id="menu">
+<table id="menu" class="sansserif">
   <tr>
-    <th>CREATE YOUR OWN PIZZA!</th>
-    <th>SMALL</th> 
-    <th>MEDIUM</th>
-    <th>LARGE</th>
+    <th class="mleft">CREATE YOUR OWN PIZZA!</th>
+    <th class="mcenter">SMALL</th> 
+    <th class="mcenter">MEDIUM</th>
+    <th class="mcenter">LARGE</th>
   </tr>
   <tr>
-    <td>Cheese</td>
-    <td>$10</td>
-    <td>$15</td>
-    <td>$20</td>
+    <td class="mleft">Cheese</td>
+    <td class="mcenter">$10</td>
+    <td class="mcenter">$15</td>
+    <td class="mcenter">$20</td>
   </tr>
   <tr>
-    <td>Cheese + 1 topping</td>
-    <td>$11</td>
-    <td>$16</td>
-    <td>$21</td>
+    <td class="mleft">Cheese + 1 topping</td>
+    <td class="mcenter">$11</td>
+    <td class="mcenter">$16</td>
+    <td class="mcenter">$21</td>
   </tr>
   <tr>
-    <td>Cheese + 2 toppings</td>
-    <td>$12</td>
-    <td>$17</td>
-    <td>$22</td>
+    <td class="mleft">Cheese + 2 toppings</td>
+    <td class="mcenter">$12</td>
+    <td class="mcenter">$17</td>
+    <td class="mcenter">$22</td>
   </tr>
   <tr>
-    <td>Cheese + 3 toppings</td>
-    <td>$13</td>
-    <td>$18</td>
-    <td>$23</td>
+    <td class="mleft">Cheese + 3 toppings</td>
+    <td class="mcenter">$13</td>
+    <td class="mcenter">$18</td>
+    <td class="mcenter">$23</td>
   </tr>
   <tr>
-    <td>Cheese + 4 toppings</td>
-    <td>$14</td>
-    <td>$19</td>
-    <td>$24</td>
+    <td class="mleft">Cheese + 4 toppings</td>
+    <td class="mcenter">$14</td>
+    <td class="mcenter">$19</td>
+    <td class="mcenter">$24</td>
   </tr>
 </table>
   
