--- a/locations.html
+++ b/locations.html
@@ -1,1 +1,27 @@
-google API images
+<!DOCTYPE html>
+<html lang="en-CA">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<title>Erik's Pizzeria</title>
+</head>
+<body>
+
+
+<h1 class="serif">Erik's Pizzeria</h1>
+<h2 class="serif">Authentic Windsor Pizza</h2>
+<h3 class="sansserif">est. 1995</h3>
+<ul class="nav">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="menu.html">Menu</a></li>
+  <li><a href="locations.html">Locations</a></li>
+</ul>
+
+<h3>Locations</h3>
+
+  
+<p class="sansserif"></p>
+
+  
+</body>
+</html>
