--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 
 <h1 class="serif">Erik's Pizzeria</h1>
-<h2 class="serif">Authentic Windsor Pizza</h2>
-<h3 class="sansserif">est. 1995</h3>
+<h2 class="serif">"A Taste of Home"</h2>
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
@@ -18,8 +17,10 @@
 </ul>
 
 
-<img class="header" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza Header" width="450" height="300">
-<p class="sansserif">est. 1995</p>
+<img class="homepage" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza" width="450" height="300">
+
+<h3 class="serif">
+<p class="sansserif">After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. I was determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!</p>
 
   
 </body>
