--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <img class="homepage" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza" width="450" height="300">
 
-<h3 class="serif">
+<h3 class="serif">Welcome!</h3>
 <p class="sansserif">After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. I was determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!</p>
 
   
