--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </ul>
 
 <h3 class="serif">Welcome!</h3>
-<p class="sansserif">
-<img class="homepage" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza" width="450" height="300">
+<p>
+<img class="homeimg" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza" width="450" height="300">
 After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. I was determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!
 </p>
 
