--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <h3>Welcome!</h3>
 <img class="homeimg" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza">
-<p class="goldbox">
+<div class="goldbox">
 <h3 class="serif">About Us</h3>
-After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. I was determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!
-</p>
+<p>After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. I was determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!
+</p></div>
 
   
 </body>
