--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <h3>Welcome!</h3>
 <img class="homeimg" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza">
 <div class="greenbox">
-<h4 class="serif">About Us</h4>
-<p>After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. We were determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!
+<h4 class="serif" class="boxtext">About Us</h4>
+<p class="boxtext">After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. We were determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!
 </p></div>
 
   
