--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 <h1 class="serif">Erik's Pizzeria</h1>
 <h2 class="serif">"A Taste of Home"</h2>
+<!-- Navbar source: https://csswizardry.com/2011/01/create-a-centred-horizontal-navigation/ -->
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
   <li><a href="locations.html">Locations</a></li>
 </ul>
+<!-- End Source -->
 
 <h3>Welcome!</h3>
 <!-- Image Source: https://pixabay.com/photos/pizza-food-italian-baked-cheese-3007395/ -->
