--- a/menu.html
+++ b/menu.html
@@ -9,16 +9,18 @@
 
 
 <h1 class="serif">Erik's Pizzeria</h1>
-<h2 class="serif">Authentic Windsor Pizza</h2>
-<h3 class="sansserif">est. 1995</h3>
+<h2 class="serif">"A Taste of Home"</h2>
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
   <li><a href="locations.html">Locations</a></li>
 </ul>
 
+<!-- OBJECT 2: Table -->
+<!-- Menu content and format inspiration: https://www.capripizza.ca/index.php/pizza-menu/ -->
+<!-- Table formatting source: https://www.w3schools.com/html/html_tables.asp -->
   <h3>Menu</h3>
-<table id="menu" class="sansserif">
+<table id="menu">
   <tr>
     <th class="mleft">CREATE YOUR OWN PIZZA!</th>
     <th class="mcenter">SMALL</th> 
@@ -56,8 +58,24 @@
     <td class="mcenter">$24</td>
   </tr>
 </table>
-  
-<p class="sansserif"></p>
+<!-- End Source -->
+
+<h4>Toppings</h4>
+<ul id="toppings">
+  <li>pepperoni</li>
+  <li>beef</li>
+  <li>bacon</li>
+  <li>ham</li>
+  <li>green peppers</li>
+  <li>mushrooms</li>
+  <li>pineapple</li>
+  <li>onions</li>
+  <li>black olives</li>
+  <li>tomatoes</li>
+  <li>garlic</li>
+  <li>oregano</li>
+  <li>parmesan</li>
+</ul>
 
   
 </body>
