--- a/menu.html
+++ b/menu.html
@@ -61,7 +61,7 @@
 <!-- End Source -->
 
 <h4>Toppings</h4>
-<ul id="toppings">
+<ul id="toppings" class="serif">
   <li>pepperoni</li>
   <li>beef</li>
   <li>bacon</li>
