--- a/menu.html
+++ b/menu.html
@@ -60,8 +60,8 @@
 </table>
 <!-- End Source -->
 
-<h4>Toppings</h4>
-<ul id="toppings" class="serif">
+<h4 class="serif">Toppings</h4>
+<ul id="toppings">
   <li>pepperoni</li>
   <li>beef</li>
   <li>bacon</li>
