--- a/locations.html
+++ b/locations.html
@@ -18,9 +18,12 @@
 
 <h3>Locations</h3>
 
-<img src="https://maps.googleapis.com/maps/api/staticmap?center=Calgary&zoom=10&size=300x300&markers=color:blue|51.0564,-114.030&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Calgary Location">
-  
-<p class="sansserif"></p>
+<p>
+<img src="https://maps.googleapis.com/maps/api/staticmap?center=Calgary&zoom=10&size=300x300&markers=color:blue|51.0564,-114.030&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Calgary Location" class="map">
+Calgary
+123 Fourth Avenue
+555-4032
+</p>
 
   
 </body>
