--- a/locations.html
+++ b/locations.html
@@ -20,8 +20,8 @@
 
 <p>
 <img src="https://maps.googleapis.com/maps/api/staticmap?center=Calgary&zoom=11&size=200x200&markers=color:blue|51.0564,-114.030&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Calgary Location" class="map">
-Calgary
-123 Fourth Avenue
+  <b>Calgary</b><br>
+123 Fourth Avenue<br>
 555-4032
 </p>
 
