--- a/locations.html
+++ b/locations.html
@@ -22,10 +22,15 @@
 <img src="https://maps.googleapis.com/maps/api/staticmap?center=Calgary&zoom=11&size=200x200&markers=color:blue|51.0564,-114.030&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Calgary Location" class="map">
   <b>Calgary</b><br>
 123 Fourth Avenue<br>
-555-4032<br>
-Hours: 12PM to 11PM
+(403) 555-0942<br>
+Open: 12PM to 11PM
 </p>
-
-  
+<p class="maptext">
+https://maps<p class="maptext">.googleapis.com/maps/api/staticmap?center=Montreal\&zoom=11&size=200x200&markers=color:blue|45.5124,-73.5581&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo
+<b>Montreal</b><br>
+456 Park Avenue<br>
+(514) 555-4076<br>
+Open: 24 hours
+</p>
 </body>
 </html>
