--- a/locations.html
+++ b/locations.html
@@ -26,7 +26,7 @@
 Open: 12PM to 11PM
 </p>
 <p class="maptext">
-https://maps<p class="maptext">.googleapis.com/maps/api/staticmap?center=Montreal\&zoom=11&size=200x200&markers=color:blue|45.5124,-73.5581&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo
+<img src="https://maps<p class="maptext">.googleapis.com/maps/api/staticmap?center=Montreal\&zoom=11&size=200x200&markers=color:blue|45.5124,-73.5581&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Montreal Location" class="map">
 <b>Montreal</b><br>
 456 Park Avenue<br>
 (514) 555-4076<br>
