--- a/locations.html
+++ b/locations.html
@@ -18,6 +18,7 @@
 
 <h3>Locations</h3>
 
+<h4 class="serif">Alberta</h4>
 <p class="maptext">
 <img src="https://maps.googleapis.com/maps/api/staticmap?center=Calgary&zoom=11&size=200x200&markers=color:blue|51.0564,-114.030&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Calgary Location" class="map">
   <b>Calgary</b><br>
@@ -25,6 +26,8 @@
 (403) 555-0942<br>
 Open: 12PM to 11PM
 </p>
+
+<h4 class="serif">Quebec</h4>
 <p class="maptext">
 <img src="https://maps<p class="maptext">.googleapis.com/maps/api/staticmap?center=Montreal\&zoom=11&size=200x200&markers=color:blue|45.5124,-73.5581&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Montreal Location" class="map">
 <b>Montreal</b><br>
