--- a/locations.html
+++ b/locations.html
@@ -18,15 +18,15 @@
 
 <h3>Locations</h3>
 
-<div><p class="maptext">
+<p class="maptext">
 <img src="https://maps.googleapis.com/maps/api/staticmap?center=Calgary&zoom=11&size=200x200&markers=color:blue|51.0564,-114.030&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Calgary Location" class="map">
   <b>Calgary</b><br>
 123 Fourth Avenue<br>
 (403) 555-0942<br>
 Open: 12PM to 11PM
-  </p></div>
+  </p>
 
-
+  <h3>Quebec</h3>
 <p class="maptext">
 <img src="https://maps.googleapis.com/maps/api/staticmap?center=Montreal\&zoom=11&size=200x200&markers=color:blue|45.5124,-73.5581&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Montreal Location" class="map">
 <b>Montreal</b><br>
