--- a/locations.html
+++ b/locations.html
@@ -23,7 +23,8 @@
   <b>Calgary</b><br>
 123 Fourth Avenue<br>
 (403) 555-0942<br>
-Open: 12PM to 11PM
+Open: 12PM to 11PM<br>
+Free delivery
   </p>
 
   <h3>Quebec</h3>
@@ -33,6 +34,7 @@ Open: 12PM to 11PM
 456 Park Avenue<br>
 (514) 555-4076<br>
 Open: 24 hours
+Delivery: $3
 </p>
 </body>
 </html>
