--- a/locations.html
+++ b/locations.html
@@ -32,7 +32,7 @@ Free delivery
 <b>Montreal</b><br>
 456 Park Avenue<br>
 (514) 555-4076<br>
-Open: 24 hours
+Open: 24 hours<br>
 Delivery: $3
 </p>
 </body>
