--- a/locations.html
+++ b/locations.html
@@ -23,7 +23,8 @@
   <b>Calgary</b><br>
 123 Fourth Avenue<br>
 (403) 555-0942<br>
-Open: 12PM to 11PM<br>
+Mon-Sat: 12PM to 11PM<br>
+Sun: 1PM to 10PM<br>
 Free delivery
   </p>
 
@@ -32,7 +33,8 @@ Free delivery
 <b>Montreal</b><br>
 456 Park Avenue<br>
 (514) 555-4076<br>
-Open: 24 hours<br>
+Mon-Sat: 24 hours<br>
+Sun: 11AM to 11PM
 Delivery: $3
 </p>
 </body>
