--- a/locations.html
+++ b/locations.html
@@ -34,8 +34,12 @@ Free delivery
 456 Park Avenue<br>
 (514) 555-4076<br>
 Mon-Sat: 24 hours<br>
-Sun: 11AM to 11PM
+Sun: 11AM to 11PM<br>
 Delivery: $3
 </p>
+  
+  <p>More locations coming soon!</p>
+  
+  <h4 class="serif">Our Favourite Pizzerias in Windsor</h4>
 </body>
 </html>
