--- a/locations.html
+++ b/locations.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=2.0">
 <link rel="stylesheet" href="style.css">
 <title>Erik's Pizzeria</title>
 </head>
