--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<h1 class="serif">Erik's Pizzeria</h1>
+<h1 class="serif">Erik's Windsor Pizzeria</h1>
 <h2 class="serif">"A Taste of Home"</h2>
 <!-- Navbar source: https://csswizardry.com/2011/01/create-a-centred-horizontal-navigation/ -->
 <ul class="nav">
