--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<h1 class="serif">Erik's Pizzeria</h1>
+<h1 class="serif">Erik's Windsor Pizzeria</h1>
 <h2 class="serif">"A Taste of Home"</h2>
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
