--- a/locations.html
+++ b/locations.html
@@ -8,8 +8,8 @@
 <body>
 
 
-<h1 class="serif">Erik's Pizzeria</h1>
-<h2 class="serif">Authentic Windsor Pizza</h2>
+<h1 class="serif">Erik's Windsor Pizzeria</h1>
+<h2 class="serif">"A Taste of Home"</h2>
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
@@ -41,5 +41,9 @@ Delivery: $3
   <p>More locations coming soon!</p>
   
   <h4 class="serif">Our Favourite Pizzerias in Windsor</h4>
+
+<p><a href="https://www.capripizza.ca/" class="pizzalink" target="_blank">Capri Pizza</a>
+  
+  </p>
 </body>
 </html>
