--- a/locations.html
+++ b/locations.html
@@ -42,7 +42,7 @@ Delivery: $3
   
   <h4 class="serif">Our Favourite Pizzerias in Windsor</h4>
 
-<p><a href="https://www.capripizza.ca/" class="pizzalink" target="_blank">Capri Pizza</a>
+<p class="pizzalink"><a href="https://www.capripizza.ca/" target="_blank">Capri Pizza</a>
   
   </p>
 </body>
