--- a/locations.html
+++ b/locations.html
@@ -43,7 +43,7 @@ Delivery: $3
   <h4 class="serif">Our Favourite Pizzerias in Windsor</h4>
 
 <p class="pizzalink"><a href="https://www.capripizza.ca/" target="_blank">Capri Pizza</a>
-  
+<p class="pizzalink"><a href="http://www.samspizzeriaandcantina.com/index.html" target="_blank">Sam's Pizzeria</a>
   </p>
 </body>
 </html>
