--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
+<!-- Responsive Design Source: https://www.w3schools.com/html/html_responsive.asp -->
+<!-- Note: This is not one of the 4 objects. -->
 <meta name="viewport" content="width=device-width, initial-scale=2.0">
 <link rel="stylesheet" href="style.css">
 <title>Erik's Pizzeria</title>
@@ -10,11 +12,14 @@
 
 <h1 class="serif">Erik's Windsor Pizzeria</h1>
 <h2 class="serif">"A Taste of Home"</h2>
+<!-- OBJECT 1: Navigation Bar -->
+<!-- Navbar source: https://csswizardry.com/2011/01/create-a-centred-horizontal-navigation/ -->
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
   <li><a href="menu.html">Menu</a></li>
   <li><a href="locations.html">Locations</a></li>
 </ul>
+<!-- End Source -->
 
 <!-- OBJECT 2: Table -->
 <!-- Menu content and format inspiration: https://www.capripizza.ca/index.php/pizza-menu/ -->
@@ -60,6 +65,7 @@
 </table>
 <!-- End Source -->
 
+<!-- List source: https://www.w3schools.com/html/html_lists_unordered.asp -->
 <h4 class="serif">Toppings</h4>
 <ul id="toppings">
   <li>pepperoni</li>
@@ -76,7 +82,7 @@
   <li>oregano</li>
   <li>parmesan</li>
 </ul>
-
+<!-- End Source -->
   
 </body>
 </html>
