--- a/locations.html
+++ b/locations.html
@@ -50,8 +50,8 @@ Delivery: $3
 
 <!-- OBJECT 4: External Links -->
 <!-- HTML Links formatting source: https://www.w3schools.com/html/html_links.asp -->
-<div class="greenbox center"><p class="pizzalink"><a href="https://www.capripizza.ca/" target="_blank">Capri Pizza</a></p>
-<p class="pizzalink"><a href="http://www.samspizzeriaandcantina.com/index.html" target="_blank">Sam's Pizzeria</a>
+<div class="greenbox"><p class="pizzalink center"><a href="https://www.capripizza.ca/" target="_blank">Capri Pizza</a></p>
+<p class="pizzalink center"><a href="http://www.samspizzeriaandcantina.com/index.html" target="_blank">Sam's Pizzeria</a>
 </p></div>
 </body>
 </html>
