--- a/locations.html
+++ b/locations.html
@@ -46,7 +46,7 @@ Delivery: $3
   
 <p>More locations coming soon!</p>
   
-<h4 class="serif">Our Favourite Pizzerias in Windsor</h4>
+<h4 class="serif center">Our Favourite Pizzerias in Windsor</h4>
 
 <!-- OBJECT 4: External Links -->
 <!-- HTML Links formatting source: https://www.w3schools.com/html/html_links.asp -->
