--- a/sharkspotter.html
+++ b/sharkspotter.html
@@ -8,7 +8,7 @@ background-color: aliceblue;
 
 h1 {
   color: skyblue;
-  margin-left: 40px;
+  text-align: center;
   font: sans-serif;
   font-size: 2em;
 }
@@ -19,7 +19,9 @@ h1 {
 <body>
   <h1>Sharkspotter Map</h1>
 
+<p style="text-align: center;">
 <iframe src="https://www.google.com/maps/d/embed?mid=1M5qVAStlhz4WXAHzZvs_WsfiPTrd2OPM" width="640" height="480"></iframe>
+</p>
 
 
 </body></html>
