--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <!-- Responsive Design Source: https://www.w3schools.com/html/html_responsive.asp -->
 <meta name="viewport" content="width=device-width, initial-scale=2.0">
 <link rel="stylesheet" href="style.css">
-<title>Erik's Pizzeria</title>
+<title>Erik's Pizza</title>
 </head>
 <body>
 
 
-<h1 class="serif">Erik's Windsor Pizzeria</h1>
+<h1 class="serif">Erik's Windsor Pizza</h1>
 <h2 class="serif">"A Taste of Home"</h2>
 <!-- Navbar source: https://csswizardry.com/2011/01/create-a-centred-horizontal-navigation/ -->
 <ul class="nav">
