--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
+  <meta charset="UTF-8">
+  <meta name="title" content="Erik's Windsor Pizzeria">
+  <meta name="description" content="Official website for Erik's Windsor Pizzeria, used to view the menu and find locations.">
+  <meta name="keywords" content="Pizza, Pizzeria, Windsor, Ontario, Canada, Erik">
+  <meta name="author" content="Erik Oosterbaan">
 <!-- Responsive Design Source: https://www.w3schools.com/html/html_responsive.asp -->
 <meta name="viewport" content="width=device-width, initial-scale=2.0">
 <link rel="stylesheet" href="style.css">
 <title>Erik's Pizza</title>
 </head>
 <body>
+<div><main>
 
-
-<h1 class="serif">Erik's Pizza</h1>
+<h1 class="serif">Erik's Windsor Pizzeria</h1>
 <h2 class="serif">"A Taste of Home"</h2>
 <!-- Navbar source: https://csswizardry.com/2011/01/create-a-centred-horizontal-navigation/ -->
 <ul class="nav">
@@ -20,13 +25,13 @@
 <!-- End Source -->
 
 <h3>Welcome!</h3>
+<div class="greenbox" title="Site description and information box">
+  <h4 class="boxtext">About Us</h4>
+  <p class="boxtext">After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. We were determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!
+  </p></div>
 <!-- Image Source: https://pixabay.com/photos/pizza-food-italian-baked-cheese-3007395/ -->
-<img class="homeimg" src="/images/pizzaheader.jpg" alt="Aesthetic Pizza">
-<div class="greenbox">
-<h4 class="serif boxtext">About Us</h4>
-<p class="boxtext">After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. We were determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!
-</p></div>
+<div><img class="homeimg" title="Sliced round pizza on a black counter surrounded by vegetables and a mug of beer" src="/images/pizzaheader.jpg" alt="Sliced round pizza on a black counter surrounded by vegetables and a mug of beer"></div>
 
-  
+  </main></div>
 </body>
 </html>
