--- a/locations.html
+++ b/locations.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
+  <meta charset="UTF-8">
+  <meta name="title" content="Erik's Windsor Pizzeria">
+  <meta name="description" content="Official website for Erik's Windsor Pizzeria, used to view the menu and find locations.">
+  <meta name="keywords" content="Pizza, Pizzeria, Windsor, Ontario, Canada, Erik">
+  <meta name="author" content="Erik Oosterbaan">
 <!-- Responsive Design Source: https://www.w3schools.com/html/html_responsive.asp -->
-<!-- Note: This is not one of the 4 objects. -->
 <meta name="viewport" content="width=device-width, initial-scale=2.0">
 <link rel="stylesheet" href="style.css">
 <title>Erik's Pizzeria</title>
 </head>
 <body>
-
+<div><main>
 
 <h1 class="serif">Erik's Windsor Pizzeria</h1>
 <h2 class="serif">"A Taste of Home"</h2>
-<!-- OBJECT 1: Navigation Bar -->
 <!-- Navbar source: https://csswizardry.com/2011/01/create-a-centred-horizontal-navigation/ -->
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
@@ -23,9 +26,8 @@
 
 <h3>Locations</h3>
 
-<!-- OBJECT 3: Google Static API -->
 <p class="maptext">
-<img src="https://maps.googleapis.com/maps/api/staticmap?center=Calgary&zoom=11&size=200x200&markers=color:blue%7C51.0564,-114.030&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Calgary Location" class="map">
+<img src="https://maps.googleapis.com/maps/api/staticmap?center=Calgary&zoom=11&size=200x200&markers=color:blue%7C51.0564,-114.030&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" title="Map showing the Erik's Windsor Pizzeria location in Calgary" alt="Map showing the Erik's Windsor Pizzeria location in Calgary" class="map">
 <b>Calgary</b><br>
 123 Fourth Avenue<br>
 (403) 555-0142<br>
@@ -35,7 +37,7 @@ Free delivery
 </p>
 
 <p class="maptext">
-<img src="https://maps.googleapis.com/maps/api/staticmap?center=Montreal&zoom=11&size=200x200&markers=color:blue%7C45.5124,-73.5581&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" alt="Montreal Location" class="map">
+<img src="https://maps.googleapis.com/maps/api/staticmap?center=Montreal&zoom=11&size=200x200&markers=color:blue%7C45.5124,-73.5581&key=AIzaSyDkNXlV6Rib05Pi-6McS2M8uChUQGBN9xo" title="Map showing the Erik's Windsor Pizza location in Montreal" alt="Map showing the Erik's Windsor Pizza location in Montreal" class="map">
 <b>Montreal</b><br>
 456 Park Avenue<br>
 (514) 555-0176<br>
@@ -46,12 +48,12 @@ Delivery: $3
   
 <p>More locations coming soon!</p>
   
-<h4 class="serif center">Our Favourite Pizzerias in Windsor</h4>
+<h4 class="center">Our Favourite Pizzerias in Windsor</h4>
 
-<!-- OBJECT 4: External Links -->
 <!-- HTML Links formatting source: https://www.w3schools.com/html/html_links.asp -->
 <div class="greenbox"><p class="pizzalink center"><a href="https://www.capripizza.ca/" target="_blank">Capri Pizza</a></p>
 <p class="pizzalink center"><a href="http://www.samspizzeriaandcantina.com/index.html" target="_blank">Sam's Pizzeria</a>
 </p></div>
+</main></div>
 </body>
 </html>
