--- a/menu.html
+++ b/menu.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
+  <meta charset="UTF-8">
+  <meta name="title" content="Erik's Windsor Pizzeria">
+  <meta name="description" content="Official website for Erik's Windsor Pizzeria, used to view the menu and find locations.">
+  <meta name="keywords" content="Pizza, Pizzeria, Windsor, Ontario, Canada, Erik">
+  <meta name="author" content="Erik Oosterbaan">
 <!-- Responsive Design Source: https://www.w3schools.com/html/html_responsive.asp -->
-<!-- Note: This is not one of the 4 objects. -->
 <meta name="viewport" content="width=device-width, initial-scale=2.0">
 <link rel="stylesheet" href="style.css">
 <title>Erik's Pizzeria</title>
@@ -12,7 +16,6 @@
 
 <h1 class="serif">Erik's Windsor Pizzeria</h1>
 <h2 class="serif">"A Taste of Home"</h2>
-<!-- OBJECT 1: Navigation Bar -->
 <!-- Navbar source: https://csswizardry.com/2011/01/create-a-centred-horizontal-navigation/ -->
 <ul class="nav">
   <li><a href="index.html">Home</a></li>
@@ -21,11 +24,10 @@
 </ul>
 <!-- End Source -->
 
-<!-- OBJECT 2: Table -->
 <!-- Menu content and format inspiration: https://www.capripizza.ca/index.php/pizza-menu/ -->
 <!-- Table formatting source: https://www.w3schools.com/html/html_tables.asp -->
   <h3>Menu</h3>
-<table id="menu">
+<table id="menu" title="Erik's Windsor Pizzeria Menu">
   <tr>
     <th class="mleft">CREATE YOUR OWN PIZZA!</th>
     <th class="mcenter">SMALL</th> 
@@ -66,8 +68,8 @@
 <!-- End Source -->
 
 <!-- List source: https://www.w3schools.com/html/html_lists_unordered.asp -->
-<h4 class="serif">Toppings</h4>
-<ul id="toppings">
+<h4>Toppings</h4>
+<ul id="toppings" title="List of toppings available">
   <li>pepperoni</li>
   <li>beef</li>
   <li>bacon</li>
