--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>Welcome!</h3>
 <div class="greenbox" title="Site description and information box">
   <h4 class="boxtext">About Us</h4>
-  <p class="boxtext">After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. We were determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Stop by one of our locations for "a taste of home"!
+  <p class="boxtext">After leaving Windsor, we found it hard to find pizza as good elsewhere in Canada. We were determined to create a pizzeria that brought the magic of Windsor pizza to displaced Windsorites in other parts of Canada. Use this site to view our menu or locate one of our pizzerias to stop by for "a taste of home"!
   </p></div>
 <!-- Image Source: https://pixabay.com/photos/pizza-food-italian-baked-cheese-3007395/ -->
 <div><img class="homeimg" title="Sliced round pizza on a black counter surrounded by vegetables and a mug of beer" src="/images/pizzaheader.jpg" alt="Sliced round pizza on a black counter surrounded by vegetables and a mug of beer"></div>
